fixed size of columns in `RechnungTable` to maintain optical spacing

--- a/src/app/rechnung-table/rechnung-table.component.scss
+++ b/src/app/rechnung-table/rechnung-table.component.scss
@@ -30,16 +30,20 @@ td.mat-cell {
     padding: 0 1em 0 1em;
 }
 
+.cdk-column-Actions {
+    width: 3em;
+}
+
 .cdk-column-Rechnungsnummer {
-    min-width: 9.5em;
+    width: 9.5em;
 }
 
 .cdk-column-Betrag-Netto {
-    min-width: 6em;
+    width: 6em;
 }
 
 .cdk-column-Datum {
-    min-width: 6em;
+    width: 6em;
 }
 
 .error-message {
